test: add tests for findall method